<resources>
    <string name="app_name">LogInRegisterFirebase</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="app_id">B17D7A11-84DA-E76D-FF96-F3AA929B5900</string>
    <string name="app_andr_sec_key">854F3CBC-22B9-6EAD-FFE7-228E831BD600</string>
    <string name="app_v">v1</string>

    <!-- LOGIN -->
    <string name="login_hint_email">Enter email</string>
    <string name="login_hint_password">Enter password</string>
    <string name="login_btn_login">LOGIN</string>
    <string name="login_btn_register">REGISTER</string>
    <string name="login_tv_stay_logged">Stay logged</string>

    <!-- REGISTER -->
    <string name="register_hint_email">Enter email</string>
    <string name="register_hint_username">Enter your name</string>
    <string name="register_hint_password">Enter password</string>
    <string name="register_hint_repeat_password">Repeat password</string>
    <string name="register_btn_register">REGISTER</string>
    <string name="register_ttl_registration">REGISTRATION</string>
    <string name="table_username_param">userName</string>
</resources>
