<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/loginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/app_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginEtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/login_hint_email"
            android:textColor="@color/et_hint_regular_color"
            android:textSize="@dimen/et_text" />

        <EditText
            android:id="@+id/loginEtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/et_hint_regular_color"
            android:textSize="@dimen/et_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:gravity="left">

            <CheckBox
                android:id="@+id/loginChbStayLogged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_tv_stay_logged"
                android:textSize="@dimen/tv_text" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">



        <Button
            android:id="@+id/loginBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@color/btn_background_color"
            android:text="@string/login_btn_login"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/btn_text"
            android:layout_margin="@dimen/btn_margin"/>
        <Button
            android:id="@+id/loginBtnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0.9"
            android:background="@color/btn_background_color"
            android:text="@string/login_btn_register"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/btn_text"
            android:layout_margin="@dimen/btn_margin"/>

    </LinearLayout>

</LinearLayout>